--- a/MyToken/Pages/Shared/_Layout.cshtml
+++ b/MyToken/Pages/Shared/_Layout.cshtml
@@ -3,37 +3,67 @@
 
 <head>
     <meta charset="utf-8"/>
-    <title>@ViewData["Title"] – MyToken</title>
-    <meta name="viewport" content="width=device-width, initial-scale=4.0"/>
+    <title>@ViewData["Title"] – PapaLama</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="~/css/site.css"/>
-    
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Particles.js -->
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script>
+        // Путь к вашему JSON-файлу
+        particlesJS.load('ParticlesConfig', '/js/ParticlesConfig.json', function() {    
+            console.log('particles.json загружен');
+        });
+    </script>
+
+    <!-- Свои стили -->
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
 </head>
 
 <body class="body">
 <!-- Навигационное меню -->
-@* <header class="navbar w-nav" data-collapse="medium" role="banner"> *@
-@*     <div class="container header-center-container"> *@
-@*         <a href="/" class="main-logo-wrap w-nav-brand"> *@
-@*             <img src="/images/logo.svg" alt="MamaBull Logo" class="main-logo"/> *@
-@*         </a> *@
-@*         <nav role="navigation" class="nav-menu-links-wrap w-nav-menu"> *@
-@*             <div class="nav-links-flex"> *@
-@*                 <a href="#about" class="single-nav-link w-inline-block"> *@
-@*                     <div>About</div></a> *@
-@*                 <a href="#roadmap" class="single-nav-link w-inline-block"> *@
-@*                     <div>Roadmap</div></a> *@
-@*                 <a href="#tokenomics" class="single-nav-link w-inline-block"> *@
-@*                     <div>Tokenomics</div></a> *@
-@*                 <a href="#faq" class="single-nav-link w-inline-block"> *@
-@*                     <div>FAQ</div></a> *@
-@*                 <a href="/whitepaper.pdf" target="_blank" class="single-nav-link w-inline-block"> *@
-@*                     <div>WhitePaper</div></a> *@
-@*             </div> *@
-@*         </nav> *@
-@*     </div> *@
-@* </header> *@
+<header class="bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg fixed-top bg-gradient">
+        <div class="container-fluid">
+            <!-- Логотип -->
+            <a class="navbar-brand" href="#">
+                <img src="/img/logo.svg"
+                     alt="Logo" 
+                     width="200" height="200" 
+                     class="d-inline-block align-text-top">
+            </a>
+
+            <!-- Мобильный меню-тогглер -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Навигационное меню -->
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link fs-4" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-4" href="#roadmap">Roadmap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-4" href="#tokenomics">Tokenomics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-4" href="#faq">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-4" href="/whitepaper.pdf" target="_blank">WhitePaper</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
 <!-- Основное содержимое -->
 <div class="main-content">
@@ -41,29 +71,75 @@
 </div>
 
 <!-- Футер -->
-@* <footer class="footer-wrapper"> *@
-@*     <div class="container"> *@
-@*         <div class="footer-content-flex-wrap"> *@
-@*             <div class="split-content"> *@
-@*                 <p>&copy; 2025 MyToken. All rights reserved.</p> *@
-@*             </div> *@
-@*             <div class="social-links"> *@
-@*                 <a href="https://x.com/MyToken" target="_blank" class="social-link w-inline-block"> *@
-@*                     <img src="/img/YouTub.png" alt="X (Twitter)" class="icon-2"/> *@
-@*                 </a> *@
-@*                 <a href="https://t.me/MyToken" target="_blank" class="social-link w-inline-block"> *@
-@*                     <img src="/images/telegram.png" alt="Telegram" class="icon-2"/> *@
-@*                 </a> *@
-@*                 <a href="https://youtube.com/mamaBullToken"  target="_blank" class="social-link w-inline-block"> *@
-@*                     <img src="/images/youtube.png" alt="YouTube" class="icon-2" /> *@
-@*                 </a> *@
-@*             </div> *@
-@*         </div> *@
-@*     </div> *@
-@* </footer> *@
+<footer class="footer-wrapper text-center mb-3" >
+    <p>&copy; 2025 PapaLama. Все права защищены.</p>
+
+    <div class="social-links">
+        <a href="https://x.com/PapaLama"
+           target="_blank"
+           class="social-link w-inline-block">
+            <img src="/img/xlogo.png"
+                 alt="X (Twitter)"
+                 class="icon-2"
+                 width="50"
+                 height="50"/>
+        </a>
+        <a href="https://t.me/PapaLama"
+           target="_blank"
+           class="social-link w-inline-block">
+            <img src="/img/tglogo.png"
+                 alt="Telegram"
+                 class="icon-2"
+                 width="50"
+                 height="50"/>
+        </a>
+        <a href="https://youtube.com/mamaBullToken"
+           target="_blank"
+           class="social-link w-inline-block">
+            <img src="/img/youtubelogo.png"
+                 alt="YouTube"
+                 class="icon-link"
+                 width="50"
+                 height="50"/>
+        </a>
+    </div>
+</footer>
 
 <!-- JS -->
-<script src="~/js/main.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
+
+<!-- JS Scripts -->
+<script>
+    // Анимация появления секций
+    const sections = document.querySelectorAll('.section');
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add('visible');
+            }
+        });
+    }, { threshold: 0.2 });
+
+    sections.forEach(section => observer.observe(section));
+
+    // particlesJS инициализация
+    particlesJS("particles-js", {
+        "particles": {
+            "number": { "value": 50 },
+            "size": { "value": 5 },
+            "color": { "value": "#6535bd" },
+            "line_linked": { "enable": true, "distance": 250 },
+            "move": { "enable": true, "speed": 2 }
+        },
+        "interactivity": {
+            "events": { "onhover": { "enable": true, "mode": "grab" } }
+        },
+        "retina_detect": true
+    });
+</script>
+
+
+
 </body>
+
 </html>
